-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
Upstream
-
None
-
3
-
9223372036854775807
The following steps can reproduce the dmesg error on Rockylinux10.1:
# mkfs.lustre --reformat --fsname=test --mgs /dev/nvme0n1 # mount.lustre /dev/nvme0n1 /mnt/mgs/ # lctl dl 0 UP osd-ldiskfs MGS-osd MGS-osd_UUID 5 1 UP mgs MGS MGS 5 2 UP mgc MGCXXX.XXX.XXX.XXX@tcp 1555f046-55f0-426a-bc74-18dcf5bd28b5 5 # umount /mnt/mgs/
[81588.139994] LDISKFS-fs (nvme0n1): mounted filesystem e4d8e6d2-5e97-4d07-9609-379eef18dc49 r/w with ordered data mode. Quota mode: journalled. [81613.918760] LustreError: 4497:0:(obd_class.h:478:obd_check_dev()) Device 2 not setup [81613.921893] LustreError: 4497:0:(obd_class.h:478:obd_check_dev()) Skipped 1 previous similar message [81613.929686] LDISKFS-fs (nvme0n1): unmounting filesystem e4d8e6d2-5e97-4d07-9609-379eef18dc49. [81613.944498] Lustre: server umount MGS complete
- is related to
-
LU-19756 WARNING: CPU: 2 PID: 9729 at mm/page-writeback.c:2796 __folio_mark_dirty+0x208/0x260
-
- Open
-