LU-19850 obd: Don't use obd_check_dev() in obd_import_event()

Since the umount operation has set obd_stopping to 1 before
calling obd_import_event(), it's unsuitable to use obd_check_dev()
in obd_import_event(). Try to fix the following dmesg error:

    # mkfs.lustre --reformat --fsname=test --mgs /dev/nvme0n1
    # mount.lustre /dev/nvme0n1 /mnt/mgs/
    # umount /mnt/mgs/
    # dmesg
     ...
     LustreError: 4497:0:(obd_class.h:478:obd_check_dev())
      Device 2 not setup
     LustreError: 4497:0:(obd_class.h:478:obd_check_dev())
      Skipped 1 previous similar message

Fixes: 665681122d9a ("LU-18752 obd: standardize error handling in obd_class.h")
Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: I655cefdc4f46146cc8a2027a3365dba3f080f59b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63771
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>